--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       
       <footer class="footer">
           <div class="menu-social">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://twitter.com/aborozcodev" target="_blank"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.instagram.com/aborozco.dev" target="_blank"><i class="fab fa-instagram"></i></a>
           </div>
       </footer>
   </body>
